Changes from December 25, 2009

- [DEPRECATED] isWhitespace. Use isWhitespaceAndNewlines instead.

Changes from December 18, 2009

- [NEW] TTRecursiveProgress object for recursive progress (go figure!)
        See TTRecursiveProgress.h for more details

- [LOCALE] Numerous fixes to diffstrings

- [LOCALE] Make --merge in diffstrings actually work

- [LOCALE] Update German, Spanish, Italian, Japanese, Chinese, and Taiwanese

- [NETWORK] TTNetworkRequestStarted/Stopped now threadsafe.

- [CRASHFIX] Synchronous connections modifying non-threadsafe members

Changes from December 11, 2009

- [NEW] -[NSDate formatShortRelativeTime]

- [NEW] Unit tests for most of Core and part of UI

- [APPSTORE] Rename previousViewController to ttPreviousViewController

- [APPSTORE] Rename lineHeight to ttLineHeight

- [APPSTORE] Rename screenX and screenY to ttScreenX and ttScreenY

- [FIXED] diffstrings sorts strings tables to make diffs more sensible

- [DEPRECATED] TTLOG

- [DEPRECATED] TTIsEmpty* methods

- [MINOR] Properly calculate the scroll height in the "Styled Views"
          example in TTCatalog

Changes from December 5, 2009

- [NEW] TTDCONDITIONLOG added to TTDebug.h

- [NEW] TTDPRINTMETHODNAME added to TTDebug.h

- [NEW] -[NSString versionStringCompare:]

- [NEW] charsetForMultipart added to TTURLRequest

- [FIXED] Table view delete-row animation slides to left, not up

- [FIXED] Potentially uninitialized variable in NSStringAdditions

- [FIXED] Layout problems in TTTextEditor

- [FIXED] github#109 TTScrollView bug: displaying landscape views in
          landscape orientation have a wrong size

- [MINOR] Stylistic consistency changes

- [MINOR] Duplicate TTIsEmptyArray in TTGlobal.h now TTIsEmptySet

- [MINOR] Reset TTTableMessageItemCell properties when preparing for reuse

- [MINOR] Fix potential crash when asking for a nonexistent
          previousViewController

- [MINOR] Use the same bytes per row in the destination bitmap for
          transformWidth

